# cv

./: .gitignore  README.md  REPORT.md  environment.yml  pyproject.toml  requirements.txt
artifacts/figures/failure_cases/resnet50/: grad_cam_intuitive_lowfaith.csv  grad_cam_unintuitive_highfaith.csv  integrated_gradients_unintuitive_highfaith.csv
artifacts/figures/failure_cases/vit_b16/: grad_cam_intuitive_lowfaith.csv  grad_cam_unintuitive_highfaith.csv  integrated_gradients_unintuitive_highfaith.csv
artifacts/figures/summary/: metrics_summary.csv
artifacts/metrics/: quantus_resnet50.csv  quantus_vit_b16.csv
configs/: explain.yaml  quantus.yaml  train_resnet50.yaml  train_vit_b16.yaml
scripts/: audit_resnet50.ps1  audit_vit_b16.ps1  download_kaggle.ps1  explain_resnet50.ps1  explain_vit_b16.ps1  failure_cases_resnet50.ps1  failure_cases_vit_b16.ps1  report_metrics.ps1  setup_venv.ps1  smoke_test.ps1  train_resnet50.ps1  train_vit_b16.ps1
src/vit_xai_audit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vit_xai_audit/audit/: quantus_cli.py
src/vit_xai_audit/explain/: captum_explain.py  explain_cli.py
src/vit_xai_audit/models/: build.py  preprocess.py
src/vit_xai_audit/report/: summarize_metrics_cli.py
src/vit_xai_audit/train/: metrics.py  threshold_eval.py  train_cli.py  trainer.py
src/vit_xai_audit/utils/: config.py  device.py  seed.py
src/vit_xai_audit/viz/: failure_cases_cli.py
