[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vit-xai-audit"
version = "0.1.0"
description = "Quantitative auditing of ViT explainability on Chest X-Ray Pneumonia dataset"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

